import mongoose from 'mongoose';
import bcrypt from 'bcryptjs';
import dotenv from 'dotenv'
import { UserRole } from './enums/UserRole.mjs';

dotenv.config();

const userSchema = new mongoose.Schema({
  name: {
    firstName: {
      type: String,
      required: true,
    },
    surname: {
      type: String,
      required: true,
    }
  },
  profileImage: {
    type: String,
    default: null
  },
  email: {
    type: String,
    required: true,
    unique: true,
    trim: true
  },
  residentialAddress: {
    district: { type: String, required: false, trim: true },
    traditionalAuthority: { type: String, required: false, trim: true },
    village: { type: String, required: false, trim: true },
  },
  password: {
    type: String,
    required: function() { return !this.googleId; },
  },
  isActive: {
    type: Boolean,
    default: true
  },
  isEmailVerified: {
    type: Boolean,
    default: false
  },
  googleId: {
    type: String,
    unique: true,
    sparse: true, 
  },
  role: {
    type: String,
    enum: Object.values(UserRole),
    required: true,
  },
  createdAt: {
    type: Date,
    default: Date.now,
  }
});

userSchema.methods.matchPassword = async function (enteredPassword) {
  return await bcrypt.compare(enteredPassword, this.password);
};

userSchema.pre('save', async function() {
  // Only hash password if it exists and is modified
  if (!this.password || !this.isModified('password')) {
  }
  
  try {
    const salt = await bcrypt.genSalt(Number(process.env.SALT_ROUNDS) || 10);
    this.password = await bcrypt.hash(this.password, salt);
  } catch (error) {
    console.log("Error", error);
  }
});

// Indexes
// userSchema.index({ email: 1 });
userSchema.index({ role: 1 });
userSchema.index({ isActive: 1 });

// Virtual for full name
userSchema.virtual('fullName').get(function() {
  return `${this.firstName} ${this.lastName}`;
});

userSchema.methods.isLandlord = function() {
  return this.role === UserRole.LANDLORD;
};

userSchema.methods.isAgent = function() {
  return this.role === UserRole.AGENT;
};

userSchema.methods.isStudent = function() {
  return this.role === UserRole.STUDENT;
};

const User = mongoose.model('User', userSchema);
export default User;